some pages content changed

--- a/app/globals.css
+++ b/app/globals.css
@@ -10736,6 +10736,7 @@ html {
   position: relative;
 }
 
-.zndx {
-  z-index: -1;
+.znh {
+  z-index: 10000000 !important;
+  position: relative;
 }
